src/components/markdown/partial-styles/_headings.scss
h1 {
    font-size: 1.5rem;
}

h2 {
    font-size: 1.25rem;
}

h3 {
    font-size: 1.125rem;
}

h4 {
    font-size: 1rem;
}

h5 {
    font-size: 0.875rem;
}

h6 {
    font-size: 0.75rem;
}

h1,
h2 {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    letter-spacing: -0.03125rem; // 0.5px
    font-weight: 500;
}

h3,
h4 {
    margin-top: 0.75rem;
    margin-bottom: 0.25rem;
    font-weight: 600;
}

h5,
h6 {
    margin-top: 0.5rem;
    margin-bottom: 0.125rem;
    font-weight: 600;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    :not([contenteditable='true']) & {
        text-wrap: balance;
    }

    [contenteditable='true'] & {
        text-wrap: initial;
    }
}

